[editor] Fix overlapping TextEditor
Remove negative margins

--- a/projects/editor/src/app/text-editor/rich-text-editor.component.scss
+++ b/projects/editor/src/app/text-editor/rich-text-editor.component.scss
@@ -21,10 +21,8 @@ tiptap-editor {
 }
 
 .fold-button {
-  margin-bottom: -1px;
   clip-path: ellipse(60% 70% at 50% 90%);
   padding-top: 10px;
-  margin-top: -10px;
   border: none;
   background-color: #FAFAFA;
 }
